adjusted all spacing, rehashed reusable sass, fixed location section, created testimonials section, added testimonials to treatments and reservation sections

--- a/styles/sass/main.sass
+++ b/styles/sass/main.sass
@@ -70,7 +70,7 @@ nav
 
 section
   max-width: 800px
-  margin: 10% auto
+  margin: 4% auto
   width: 90%
 
 footer
@@ -83,6 +83,12 @@ span
   display: inline-block
   margin-top: 40px
 
+blockquote
+  margin: 2.5em auto
+  width: 90%
+  p
+    margin: .4em 0
+
 .activity
   float: left
   width: 50%
@@ -93,8 +99,7 @@ span
   text-align: center
   width: 42%
 
-.event
-  margin: 10% 0
+.full-width
   width: 100%
 
 .details
@@ -104,6 +109,9 @@ span
 
 .pull
   float: left
+
+.push
+  float: right
 
 .overview
   float: left
@@ -370,18 +378,16 @@ h1, h2, h3, h4, h5, h6
 
 h1
   font-size: $base-size * 3.5
+  line-height: 1
 
-h2
+h2, h5
   font-size: $base-size * 1
 
 h3
-  font-size: $base-size * 1
+  font-size: $base-size * 1.2
 
 h4
   font-size: $base-size * 1.5
-
-h5
-  font-size: $base-size * 1.3
 
 h6, .registry
   font-size: $base-size * .9
@@ -398,11 +404,11 @@ nav
 
 h1
   letter-spacing: -.03em
-  margin: 0 0 -44px
+  margin: 0 0 -24px
   overflow: visible
   zoom: 1
 
-h2
+.text-spread
   letter-spacing: .56em
   padding-left: 20px
 
@@ -411,6 +417,9 @@ h2, h4, h5, h6
 
 h3
   margin: .5em 0 .3em 0 
+
+blockquote
+  font-size: $base-size * .32
 
 // Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome.
 b, strong
@@ -448,7 +457,8 @@ q
 
 .left
   text-align: left
-  padding-left: 6%
+  li
+    padding-left: 6%
 
 // ~~~~~~~~~~MEDIA QUERIES~~~~~~~~~~
 
